# suboptimal

./: .gitignore  Cargo.toml  go.mod  main.go
rust/: Cargo.toml  build.rs
rust/src/: main.rs
src/: example.json  flags.proto  main.rs
